Colaboratory를 통해 생성됨

--- a/01_codelab1_json.ipynb
+++ b/01_codelab1_json.ipynb
@@ -6,7 +6,6 @@
       "name": "05_codelab1_json.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "interpreter": {
@@ -75,7 +74,7 @@
       "source": [
         "import json"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -158,7 +157,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uKg5Uryimee7",
-        "outputId": "1cc90e01-9df8-4576-a822-d931b16d2279"
+        "outputId": "7e336338-009c-4b4c-bc1f-2685944bfff5"
       },
       "source": [
         "jdata = {\n",
@@ -176,7 +175,7 @@
         "}\n",
         "print(type(jdata))"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,18 +189,166 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "tgJ8uYaao_2d",
+        "outputId": "4cc38096-f10f-4895-ec67-c2f1d3adbab7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "jdata.keys()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['request_id', 'return_type', 'result', 'reason', 'return_object', 'result_code'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FkhgdsidpLIS",
+        "outputId": "cc39c4bc-8caf-4722-e185-95282cf57b55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "jdata.values()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values(['0', 'omAnalysis', 0, '', {'query': '한국의 가을은 매우 아름답습니다.', 'type': '감성분석', 'score': 0.9999995231628418, 'label': '긍정'}, 'success'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "prpz1YDtrXuo",
+        "outputId": "d2685e35-1832-4557-e56c-b7f680129729",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for k, v in jdata.items():\n",
+        "  print(k, v)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "request_id 0\n",
+            "return_type omAnalysis\n",
+            "result 0\n",
+            "reason \n",
+            "return_object {'query': '한국의 가을은 매우 아름답습니다.', 'type': '감성분석', 'score': 0.9999995231628418, 'label': '긍정'}\n",
+            "result_code success\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TpwzQm3prlCa",
+        "outputId": "d5427585-29cd-4be3-fc17-ac94160d88c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "jdata['return_object']"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'label': '긍정',\n",
+              " 'query': '한국의 가을은 매우 아름답습니다.',\n",
+              " 'score': 0.9999995231628418,\n",
+              " 'type': '감성분석'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "duL1iZaCrrUk",
+        "outputId": "6f015672-0159-4733-c3ed-a4df52bfaa7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "jdata['return_object']['query']"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'한국의 가을은 매우 아름답습니다.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "fsfQxHfQs3ST",
-        "outputId": "dec11db6-9edc-45c6-b2c7-5481c5e6e80b"
+        "outputId": "df645282-d538-4d13-b7b2-c3437c449e3d"
       },
       "source": [
         "#딕션너리에서 긍정의 값을 추출\n",
-        " "
+        "jdata['return_object']['label']"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +363,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 22
         }
       ]
     },
@@ -227,13 +374,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1PGydmbbkD-a",
-        "outputId": "94b88477-b758-4f36-9c7f-412e4173ec7f"
+        "outputId": "24fdc9ef-b52e-46ec-fe8c-864cac5713eb"
       },
       "source": [
         "#딕션너리를 json형식의 문자열로 변환1\n",
-        "  "
+        "jsonStr = json.dumps(jdata)\n",
+        "print(jsonStr)\n",
+        "print(type(jsonStr))"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,13 +401,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bk2Ybf7Bm3UQ",
-        "outputId": "bddf8894-db6b-44a5-d031-4430e003adbb"
+        "outputId": "b6872653-741a-4425-e7b1-d2d7da84c3fa"
       },
       "source": [
         "#딕션너리를 json형식의 문자열로 변환2\n",
-        " "
+        "jsonStr1 = json.dumps(jdata, indent='\\t')\n",
+        "print(jsonStr1)"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,8 +425,7 @@
             "\t\t\"label\": \"\\uae0d\\uc815\"\n",
             "\t},\n",
             "\t\"result_code\": \"success\"\n",
-            "}\n",
-            "<class 'str'>\n"
+            "}\n"
           ],
           "name": "stdout"
         }
@@ -289,13 +438,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fk_y1m9om7-C",
-        "outputId": "7e3fd315-cf28-4f5b-c4d3-d574a3efb9db"
+        "outputId": "a57ce560-5f84-47d3-8962-ca4636d677b4"
       },
       "source": [
         "#딕션너리를 json형식의 문자열로 변환3\n",
-        " "
+        "jsonStr1 = json.dumps(jdata, indent='\\t', ensure_ascii=False)\n",
+        "print(jsonStr1)"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,8 +462,7 @@
             "\t\t\"label\": \"긍정\"\n",
             "\t},\n",
             "\t\"result_code\": \"success\"\n",
-            "}\n",
-            "<class 'str'>\n"
+            "}\n"
           ],
           "name": "stdout"
         }
@@ -344,6 +493,30 @@
             "\u001b[0;32m<ipython-input-34-be55398ce88e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjsonStr2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'return_object'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QdDmnzpyxHC7",
+        "outputId": "429ba6cd-2b35-4773-ae9d-7e0cadc38546",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -447,6 +620,101 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "V1EsU6_ry8V7"
+      },
+      "source": [
+        "with open('/content/drive/MyDrive/파이썬특강/2021_codelab/data/data.json', 'r') as fp:\n",
+        "  ljson = json.load(fp)"
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bwcytyXOzhZT",
+        "outputId": "9f5950a9-06bd-45aa-f59b-948636131f8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(ljson)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'request_id': '0', 'return_type': 'omAnalysis', 'result': 0, 'reason': '', 'return_object': {'query': '한국의 가을은 매우 아름답습니다.', 'type': '감성분석', 'score': 0.9999995231628418, 'label': '긍정'}, 'result_code': 'success'}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OXTcNeizzmXR",
+        "outputId": "733c7d3d-ff75-4911-9124-e8b61e69020d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(ljson)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "83s0zdxyzxh7",
+        "outputId": "6a5a2aa2-9543-414b-e528-053b16edaa12",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "ljson['request_id']"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -530,6 +798,300 @@
         "    ]\n",
         "}\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GoW2IyDW2Cum"
+      },
+      "source": [
+        "em = {'기쁨':'\\U0001F604', '신뢰':'\\U0001F609', '공포':'\\U0001F910', '놀라움':'\\U0001F631', '슬픔':'\\U0001F620', '혐오':'\\U0001F616', '분노':'\\U0001F621', '기대':'\\U0001F9D0'}"
+      ],
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fX0KA09A2Kfh",
+        "outputId": "593060c1-253b-4093-b70f-62a21ba031cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for item in em :\n",
+        "  print(em[item])"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "😄\n",
+            "😉\n",
+            "🤐\n",
+            "😱\n",
+            "😠\n",
+            "😖\n",
+            "😡\n",
+            "🧐\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r6Kjj3bt18lb"
+      },
+      "source": [
+        "data = '''\n",
+        " {\n",
+        "    \"query\": \"비가 와서 싫어요.\",\n",
+        "    \"type\": \"감정분석\",\n",
+        "    \"Result\": [\n",
+        "        [\n",
+        "            0.6489619016647339,\n",
+        "            \"분노\"\n",
+        "        ],\n",
+        "        [\n",
+        "            0.6208652257919312,\n",
+        "            \"혐오\"\n",
+        "        ]\n",
+        "    ]\n",
+        "}\n",
+        "'''"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TnilfvSS3moW",
+        "outputId": "5ccaf6ff-6dbb-4d53-ddb1-200cb8ffe2bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(data)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TP9bmJ7743vc"
+      },
+      "source": [
+        "dt =  {\n",
+        "    \"query\": \"비가 와서 싫어요.\",\n",
+        "    \"type\": \"감정분석\",\n",
+        "    \"Result\": [\n",
+        "        [\n",
+        "            0.6489619016647339,\n",
+        "            \"분노\"\n",
+        "        ],\n",
+        "        [\n",
+        "            0.6208652257919312,\n",
+        "            \"혐오\"\n",
+        "        ]\n",
+        "    ]\n",
+        "}"
+      ],
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "snQsI9np47Z5",
+        "outputId": "097c961f-cfd8-4420-fd88-50617f4b424f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(dt)"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sTUxRBNr2s1w",
+        "outputId": "a2fe3919-3d04-4caf-b400-b898000cbd2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for k, v in dt.items():\n",
+        "  print(k, v)"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "query 비가 와서 싫어요.\n",
+            "type 감정분석\n",
+            "Result [[0.6489619016647339, '분노'], [0.6208652257919312, '혐오']]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dqfe1_LC3t8z",
+        "outputId": "146da8ba-a101-46d5-d6ed-be51cd731d2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "dt['query']"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'비가 와서 싫어요.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F1DON50H6ghb",
+        "outputId": "5b8fc5fc-830a-4e3b-8874-14938910e639",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dt['Result']"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[0.6489619016647339, '분노'], [0.6208652257919312, '혐오']]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-cD14vWQ6kGb",
+        "outputId": "32fe978a-6abd-406f-e1fc-47f558b22f49",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "dt['Result'][0][1]"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'분노'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dlvRuNwc68eH",
+        "outputId": "ef62ec44-11a2-45d7-a484-540e2023cba5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "em['분노'], dt['query'], dt['Result'][0]"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('😡', '비가 와서 싫어요.', '분노')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 100
+        }
       ]
     }
   ]
