Colaboratory를 통해 생성됨

--- a/02_codelab2_urllib.ipynb
+++ b/02_codelab2_urllib.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "06_codelab2_urllib.ipynb",
+      "name": "02_codelab2_urllib.ipynb",
       "provenance": [],
       "toc_visible": true,
       "include_colab_link": true
@@ -28,7 +28,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cybermin/2021_codelab/blob/main/02_codelab2_urllib.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/YooSangH0/2021_codelab/blob/main/02_codelab2_urllib.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -112,16 +112,17 @@
         "id": "lWmOfcPfEkcG"
       },
       "source": [
-        "url =  \n",
+        "url =  \"http://svc.saltlux.ai:31781\"\n",
         "headers={\"Content-Type\":\"application/json\" } \n",
         "\n",
-        "apiKey =  \n",
+        "apiKey = \"3ef6bdf4-e8a6-4ae9-a783-18a5ba917a8d\"\n",
+        "msg = \"비가 안와요.\"\n",
         "rqData = {\n",
-        "    \"key\": ,\n",
-        "    \"serviceId\": ,\n",
+        "    \"key\": apiKey ,\n",
+        "    \"serviceId\": \"11987300804\",\n",
         "    \"argument\": {\n",
-        "        \"type\": ,\n",
-        "        \"query\": \n",
+        "        \"type\": \"1\",\n",
+        "        \"query\": msg\n",
         "    }\n",
         "}"
       ],
@@ -131,17 +132,45 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TYEQcqbjwbk5",
+        "outputId": "ec3d879c-c5b8-4cd1-d2af-29420adfe56c"
+      },
+      "source": [
+        "type(rqData)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "hJJVQnz1EsmF"
       },
       "source": [
         "# 요청 객체 생성\n",
-        " \n",
+        "req = Request(url, headers=headers)\n",
         "\n",
         "# 전달 데이터 json 형태로 만들기\n",
-        " \n",
+        "jdata = json.dumps(rqData).encode('utf-8')\n",
         "\n",
         "#요청\n",
-        " "
+        "response = urlopen(req, jdata)"
       ],
       "execution_count": null,
       "outputs": []
@@ -153,7 +182,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5hd-rKdlB3om",
-        "outputId": "468a880b-1b63-4d6f-bfb8-ea56020eb392"
+        "outputId": "da958dbb-668c-48d8-c111-196ea97ff964"
       },
       "source": [
         "response "
@@ -164,13 +193,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<http.client.HTTPResponse at 0x7fcc1f9e6350>"
+              "<http.client.HTTPResponse at 0x7fe49bfac710>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 39
         }
       ]
     },
@@ -181,7 +210,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zCger518B_Gq",
-        "outputId": "c910096e-2a8b-40e9-815b-5384919541a9"
+        "outputId": "e0751e06-96a8-4611-c441-7e3fc09f6702"
       },
       "source": [
         "response.read()"
@@ -192,13 +221,46 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "b'{\"query\": \"\\xed\\x8c\\x8c\\xec\\x9d\\xb4\\xec\\x8d\\xac\\xec\\x9d\\x80 \\xec\\x9e\\xac\\xeb\\xaf\\xb8\\xec\\x9e\\x88\\xec\\x96\\xb4\\xec\\x9a\\x94.\", \"type\": \"\\xea\\xb0\\x90\\xec\\xa0\\x95\\xeb\\xb6\\x84\\xec\\x84\\x9d\", \"Result\": [[0.9589413404464722, \"\\xec\\x8b\\xa0\\xeb\\xa2\\xb0\"]]}'"
+              "b'{\"query\": \"\\xeb\\xb9\\x84\\xea\\xb0\\x80 \\xec\\x95\\x88\\xec\\x99\\x80\\xec\\x9a\\x94.\", \"type\": \"\\xea\\xb0\\x90\\xec\\xa0\\x95\\xeb\\xb6\\x84\\xec\\x84\\x9d\", \"Result\": [[0.3205946087837219, \"\\xed\\x98\\x90\\xec\\x98\\xa4\"]]}'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "8Gx6SZiU1Ltz",
+        "outputId": "64519a82-9599-49d9-a81a-b897a63de010"
+      },
+      "source": [
+        "resp = response.read().decode('utf-8')\n",
+        "resp"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "''"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
         }
       ]
     },
@@ -209,19 +271,120 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s2Y8kzyvE4jk",
-        "outputId": "76d3eca9-0c30-40ae-dbcd-ccdcb3d4fd77"
+        "outputId": "c16694a2-5b83-4480-aa0b-93b5f4801617"
       },
       "source": [
         "# 요청에 대한 응답처리\n",
-        "  "
+        "resp = response.read().decode('utf-8')\n",
+        "print(resp)\n",
+        "print(type(resp))"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{\"query\": \"파이썬은 재미있어요.\", \"type\": \"감정분석\", \"Result\": [[0.9589413404464722, \"신뢰\"]]}\n",
+            "\n",
             "<class 'str'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dFOFlcvs22ai"
+      },
+      "source": [
+        "def aiData(msg) :\n",
+        "  url =  \"http://svc.saltlux.ai:31781\"\n",
+        "  headers={\"Content-Type\":\"application/json\" }\n",
+        "\n",
+        "  apiKey = \"3ef6bdf4-e8a6-4ae9-a783-18a5ba917a8d\"\n",
+        "\n",
+        "  rqData = {\n",
+        "    \"key\": apiKey ,\n",
+        "    \"serviceId\": \"11987300804\",\n",
+        "    \"argument\": {\n",
+        "        \"type\": \"1\",\n",
+        "        \"query\": msg\n",
+        "      }\n",
+        "  }\n",
+        "\n",
+        "# 요청 객체 생성\n",
+        "  req = Request(url, headers=headers)\n",
+        "\n",
+        "# 전달 데이터 json 형태로 만들기\n",
+        "  jdata = json.dumps(rqData).encode('utf-8')\n",
+        "\n",
+        "#요청\n",
+        "  response = urlopen(req, jdata)\n",
+        "  resp = response.read().decode('utf-8')\n",
+        "\n",
+        "  return resp"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "VLGmI4oS3-kq",
+        "outputId": "a67d1b1d-8352-4d80-90b3-1760d94b0679"
+      },
+      "source": [
+        "aiData(\"오늘은 맛있는 저녁을 먹었습니다.\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'{\"query\": \"오늘은 맛있는 저녁을 먹었습니다.\", \"type\": \"감정분석\", \"Result\": [[0.7215429544448853, \"기쁨\"]]}'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zcsw5bcu4Ijb",
+        "outputId": "2541adcd-4cf4-4cab-a273-5e4b4b3fa20e"
+      },
+      "source": [
+        "indata = input(\"감정 분석 문장을 입력하세요.\")\n",
+        "r = json.loads(aiData(indata))\n",
+        "print(r)\n",
+        "print(type(r))\n",
+        "idx = r['Result'][0][1]\n",
+        "print(dtmsg[idx])"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "감정 분석 문장을 입력하세요.아아\n",
+            "{'query': '아아', 'type': '감정분석', 'Result': [[0.2952653467655182, '기쁨']]}\n",
+            "<class 'dict'>\n",
+            "와우 기뻐요\n"
           ],
           "name": "stdout"
         }
@@ -254,6 +417,69 @@
         "         '기대':'기대되요'}\n",
         "  ```\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YaleXtdp7qTI"
+      },
+      "source": [
+        "def em(E) :\n",
+        "  url =  \"http://svc.saltlux.ai:31781\"\n",
+        "  headers={\"Content-Type\":\"application/json\" }\n",
+        "\n",
+        "  apiKey = \"3ef6bdf4-e8a6-4ae9-a783-18a5ba917a8d\"\n",
+        "\n",
+        "  rqData = {\n",
+        "    \"key\": apiKey ,\n",
+        "    \"serviceId\": \"11987300804\",\n",
+        "    \"argument\": {\n",
+        "        \"type\": \"1\",\n",
+        "        \"query\": E\n",
+        "      }\n",
+        "  }\n",
+        "\n",
+        "  req = Request(url, headers=headers)\n",
+        "  jdata = json.dumps(rqData).encode('utf-8')\n",
+        "  response = urlopen(req, jdata)\n",
+        "  respo = response.read().decode('utf-8')\n",
+        "\n",
+        "  return respo"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qly1iG9L_OQs",
+        "outputId": "20d98d6b-83d7-4f37-c463-94ebbcee2c40"
+      },
+      "source": [
+        "while True:\n",
+        "  Indata = input(\"감정 분석 문장을 입력하세요. \")\n",
+        "\n",
+        "  if Indata in [\"그만\" , \"종료\"] : break\n",
+        "\n",
+        "  r = json.loads(aiData(indata))\n",
+        "  idx = r['Result'][0][1]\n",
+        "  print(dtmsg[idx])"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "감정 분석 문장을 입력하세요. 아아 님은 갔습니다\n",
+            "와우 기뻐요\n",
+            "감정 분석 문장을 입력하세요. 그만\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
